--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "A booking/reservation and event management platform",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index"
   },
   "author": "Chinedu Ifediorah",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcrypt-nodejs": "0.0.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -24,6 +25,6 @@
     "multer": "^1.4.2",
     "redis": "^3.0.2",
     "supertest": "^4.0.2",
-    "uuid": "^8.1.0"
+    "uuid": "^8.3.0"
   }
 }
