--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A booking/reservation and event management platform",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon index"
   },
   "author": "Chinedu Ifediorah",
