--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
     "express-validator": "^6.6.1",
     "helmet": "^3.22.0",
+    "html-to-text": "^5.1.1",
     "jest": "^25.4.0",
     "jsonwebtoken": "^8.5.1",
+    "juice": "^7.0.0",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
     "redis": "^3.0.2",
     "supertest": "^4.0.2",
     "uuid": "^8.3.0"
