--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon index"
+    "start": "nodemon index",
+    "seed": "node ./src/seeds/role.seeds.js"
   },
   "author": "Chinedu Ifediorah",
   "license": "ISC",
