chore, updated .env.example with gmail credentials

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ MAILTRAP_HOST=smtp.mailtrap.io
 MAILTRAP_PORT=2525
 MAILTRAP_USER=
 MAILTRAP_PASSWORD=
+
+#gmail setup
+GMAIL_USER=
+GMAIL_PASS=
+GMAIL_SERVICE=gmail
